css/style.css
@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");

/* 폰트 */
@font-face {
  font-family: "NanumsquareacEB";
  src: url(../fonts/NanumSquare_acEB.ttf);
}

@font-face {
  font-family: "NanumsquareB";
  src: url(../fonts/NanumSquareB.ttf);
}

@font-face {
  font-family: "Gyeonggititle";
  src: url(../fonts/Gyeonggi_title.ttf);
}

@font-face {
  font-family: "Righteous";
  src: url(../fonts/Righteous-Regular.ttf);
}

@font-face {
  font-family: "NotosanskrM";
  src: url(../fonts/NotoSansKR-Medium.ttf);
}

@font-face {
  font-family: "NotosanskrR";
  src: url(../fonts/NotoSansKR-Regular.ttf);
}

body {
  margin: 0;
  display: flex;
  scroll-behavior: smooth;
}

.sidebar {
  position: fixed;
  left: 0;
  top: 0;
  width: 170px;
  height: 100vh;
  background: teal;
  color: white;
  padding: 2rem 1rem;
  z-index: 100;
}

.sidebar ul {
  list-style: none;
  padding: 0;
}

.sidebar li {
  margin-bottom: 3rem;
}

.sidebar a {
  font-family: "NanumsquareacEB";
  font-size: 1.78rem;
  color: white;
  text-decoration: none;
  font-weight: bold;
}

.sidebar a.active {
  color: rgb(115, 255, 243);
}

.main-content {
  margin-left: 275px;
  width: 70%;
  max-width: 1500px;
}

/* 섹션 공통 css적용사항 */
.sectiondiv {
  margin-top: 45px;
  padding-bottom: 50px;
  border-bottom: 0.2px solid rgba(18, 116, 111, 0.288);
}

#intro {
  margin-top: 175px;
}
#intro .content {
  margin-top: 30px;
}
#intro .intro-title {
  font-family: "Gyeonggititle";
  font-size: 2.5rem;
  color: #36c7bb;
}
#intro .intro-title2 {
  font-family: "Gyeonggititle";
  font-size: 2.35rem;
  margin-left: 9px;
}

#intro .intro-textbox {
  margin-top: 20px;
}
#intro .intro-text {
  font-family: "NanumsquareB";
  font-size: 1.35rem;
}

.section-title {
  font-family: "Gyeonggititle";
  font-size: 2.88rem;
  color: black;
}

.contact-info {
  margin-top: 15px;
  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif, sans-serif;
  font-size: 1.2rem;
  color: #555;
}

.contact-info span {
  margin: 0 10px;
}

.contact-info b {
  color: #239187;
}

.separator {
  margin: 0 16px;
  color: #aaa;
}

.socialdiv {
  margin-top: 22px;
}

.socialdiv a,
#modalPagesContainer .modal-pages a {
  text-decoration: none !important;
  color: black;
}

/* info-아이콘 */
.socialdiv svg {
  width: 60px;
  height: 60px;
  margin: 0 15px;
  transition: 250ms;
}
.socialdiv svg:hover {
  color: rgb(13, 192, 192);
}
#modalPagesContainer .modal-pages svg {
  width: 45px;
  height: 45px;
  margin: 0px 25px;
  transition: 200ms;
}
#modalPagesContainer .modal-pages svg:hover {
  color: rgb(13, 192, 192);
}

/* 포트폴리오 영역 */
.portfolio-container {
  display: flex;
  justify-content: space-evenly;
  flex-wrap: wrap;
}

.portfoliotitle {
  display: flex;
}

/* 툴팁 (안내 후 삭제) */
.tooltip-container {
  position: relative;
  display: inline-block;
  margin-left: 15px;
  align-content: center;
}
.tooltipiconcenter {
  margin: auto 0px;
  position: relative;
  cursor: pointer;
  transition: opacity 1.2s ease;
}
.tooltipiconcenter.fade-out {
  opacity: 0;
  pointer-events: none;
}

.tooltip-container svg {
  width: 25px;
  height: 25px;
  color: #ff0000;
}
.tooltip-text {
  visibility: hidden;
  background-color: black;
  color: #fff;
  font-size: 12px;
  padding: 5px 8px;
  border-radius: 4px;
  white-space: nowrap;
  position: absolute;
  z-index: 999;
  top: -25px;
  left: 96px;
  transform: translateX(-50%);
  opacity: 0;
  transition: opacity 0.2s ease;
  pointer-events: none;
}

.tooltipiconcenter:hover .tooltip-text {
  visibility: visible;
  opacity: 1;
}

.portfolio-thumbnail {
  width: 22.5%;
  aspect-ratio: 1 / 1;
  background-color: white;
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 2rem;
  position: relative;
  overflow: hidden;
  margin-bottom: 25px;
}

.portfolio-thumbnail img {
  width: 100%;
  display: block;
}

/* overlay */
.overlay {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(0, 0, 0, 0.75);
  display: flex;
  justify-content: center;
  align-items: center;
  transform: translateY(100%);
  transition: transform 0.3s ease;
  pointer-events: none;
  z-index: 2;
  color: white;
  font-size: 1.2em;
  pointer-events: auto;
  cursor: pointer;
}

.overlay-content {
  text-align: center;
  color: white;
}

.overlay-content hr {
  height: 2px;
  width: 100px;
  margin: 12px auto 12px auto;
  border: none;
  background: white;
  transition: width 0.4s ease, box-shadow 0.3s ease;
}

/* 오버레이 특수효과 */
.portfolio-thumbnail:hover .oc1 hr {
  width: 150px;
  box-shadow: 2px 2px 16px 3px red;
}
.portfolio-thumbnail:hover .oc2 hr {
  width: 150px;
  box-shadow: 2px 2px 16px 3px rgb(62, 138, 253);
}
.portfolio-thumbnail:hover .oc3 hr {
  width: 150px;
  box-shadow: 2px 2px 16px 3px rgb(228, 225, 54);
}
.portfolio-thumbnail:hover .oc4 hr {
  width: 150px;
  box-shadow: 2px 2px 16px 3px rgb(130, 85, 141);
}
.portfolio-thumbnail:hover .oc5 hr {
  width: 150px;
  box-shadow: 2px 2px 16px 3px white;
}
.portfolio-thumbnail:hover .oc6 hr {
  width: 150px;
  box-shadow: 2px 2px 16px 5px rgb(255, 81, 0);
}

.oc1 span,
.oc2 span,
.oc3 span,
.oc4 span,
.oc6 span {
  font-size: 1.15rem;
  font-family: "NanumsquareB", sans-serif;
}
.oc5 span {
  font-size: 1.1rem;
  font-family: "NanumsquareB", sans-serif;
}
.oc6-div2 span {
  font-size: 1.3rem;
  font-family: "Righteous", cursive;
}
/* 두줄 간격조정 */
.oc6-div2 {
  color: rgb(255, 81, 0);
  margin-top: -20px;
}

/* 모달 레이아웃 관련----------------------------------------------- */
.modal {
  display: none;
  position: fixed;
  z-index: 999;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  background-color: rgba(0, 0, 0, 0.7);
  justify-content: center;
  align-items: center;
}
.modal-content {
  background: white;
  padding: 20px 30px;
  border-radius: 10px;
  min-width: 50%;
  max-width: 1800px;
  max-height: 90vh;
  min-height: 160px;
  overflow-y: auto;
  position: relative;
  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
}
.close {
  position: absolute;
  top: 10px;
  right: 20px;
  font-size: 30px;
  font-weight: bold;
  color: #7e7a7a;
  cursor: pointer;
}
.close:hover {
  color: #444;
}

/* 수시 변경되는 모달 컨텐츠 */
.modal-pages {
  display: none;
  animation: fadeIn 0.3s ease;
}

.modal-pages.active {
  display: block;
}

.modal-pages .desc {
  border-top: 0.75px solid rgba(177, 168, 168, 0.616);
  padding: 35px 0px;
}
.modal-pages .interfacediv {
  display: flex;
  margin-top: 10px;
  margin-bottom: 10px;
  float: right;
}
.modal-pages h2 {
  font-family: "NanumsquareB";
  font-size: 1.5rem;
}
.modal-pages p {
  font-family: "NotosanskrR";
  font-size: 1rem;
}

.modal-pages .gopage {
  text-align: center;
  width: 80px;
  height: 24px;
  margin-top: 8px;
  background-color: #04aa6d;
  border: 0.2px solid rgb(21, 179, 21);
  border-radius: 5px;
  color: white;
  padding: 4px 6px;
  font-family: "notosanskrR";
  font-size: 0.9rem;
  transition: 250ms;
}
.modal-pages .gopage:hover {
  background-color: #10885c;
}

.modal-pages .pf4download {
  text-align: center;
  width: 80px;
  height: 43px;
  margin-top: -3px;
  background-color: #030303;
  border: 0.2px solid rgb(185, 185, 185);
  border-radius: 5px;
  color: white;
  padding: 4px 6px;
  font-family: "notosanskrR";
  font-size: 0.85rem;
  transition: 200ms;
}
.modal-pages .pf4download:hover {
  background-color: #243b34;
}

@keyframes fadeIn {
  from {
    opacity: 0;
    transform: translateY(10px);
  }
  to {
    opacity: 1;
    transform: translateY(0);
  }
}

/* 모달-페이징 */
.modal-controls {
  margin-top: 20px;
  text-align: center;
}
.modal-controls button {
  padding: 6px 14px;
  margin: 0 20px;
  border: none;
  background-color: teal;
  cursor: pointer;
  border-radius: 5px;
  color: rgb(255, 255, 255);
  transition: 200ms;
}
.modal-controls button:hover {
  background-color: #335c44;
}

/* 모달 컨텐츠 개별 css - 미디어 크기 조정 */

.pfc_1 {
  width: 450px;
  height: auto;
}
.pfc_190 {
  width: 225px;
  height: 300px;
  margin: 0px 5px;
}
.pfc_265 {
  width: 300px;
  height: auto;
  margin: 0px 5px;
}
.pfc_320 {
  width: 320px;
  height: auto;
}
.pfc_500 {
  width: 500px;
  height: auto;
}
.pfc_600 {
  width: 600px;
  height: auto;
}
.pfc_1000 {
  width: 1000px;
  height: auto;
}
/* 모달 컨텐츠 개별 css -  미디어 margin 조절 */

